handle favourites screen when empty

--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -148,5 +148,13 @@
     "ShoppingCart":"عربة التسوق",
     "ItemsInBag":"منتجات في حقيبة التسوق",
     "TotalWithVat":"إجمالي هذا الطلب شاملًا ضريبة القيمة المضافة",
-    "Checkout":"ابدأ السداد"
+    "Checkout":"ابدأ السداد",
+    "Items":"منتج",
+    "WishList":"قائمة الرغبات",
+    "AvailableInStore":"متوفر بالمتجر",
+    "BuyOnline":"الشراء عبر الإنترنت ",
+    "AddToCart":"أضف إلى العربة ",
+    "NotReady":"لست مستعدًا للشراء بعد؟ ",
+    "SaveUntilReady":"احفظ المنتجات هنا حتى تصبح مستعدًا ",
+    "BrowseProducts":"استعرض منتجاتنا "
 }
