add stores locations in arabic

--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -156,5 +156,6 @@
     "AddToCart":"أضف إلى العربة ",
     "NotReady":"لست مستعدًا للشراء بعد؟ ",
     "SaveUntilReady":"احفظ المنتجات هنا حتى تصبح مستعدًا ",
-    "BrowseProducts":"استعرض منتجاتنا "
+    "BrowseProducts":"استعرض منتجاتنا ",
+    "Hotline":"الخط الساخن"
 }
