--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -156,5 +156,6 @@
     "AddToCart":"Add to shopping bag",
     "NotReady":"Not quite ready to buy?",
     "SaveUntilReady":"Save it here until you're ready",
-    "BrowseProducts":"Browse our products"
+    "BrowseProducts":"Browse our products",
+    "Hotline":"Hotline"
 }
