--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -157,5 +157,9 @@
     "NotReady":"لست مستعدًا للشراء بعد؟ ",
     "SaveUntilReady":"احفظ المنتجات هنا حتى تصبح مستعدًا ",
     "BrowseProducts":"استعرض منتجاتنا ",
-    "Hotline":"الخط الساخن"
+    "Hotline":"الخط الساخن",
+    "WrongPassword":"كلمة المرور خاطئة",
+    "DeleteDesc":"هل أنت متأكد أنك تريد حذف حسابك؟",
+    "EnterPassword":"ادخل كلمة المرور:",
+    "DeleteAccount":"حذف الحساب"
 }
