handle empty carousel

--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -123,6 +123,8 @@
     "NowInIkea":"الآن في ايكيا مصر",
 
     "Offers":"العروض",
+    "OnlyInStock":"فقط في المخزن",
+    "OutOfStock":"غير متوفر",
     "OpenHours":"انظر ساعات العمل و اكثر",
     "OptionalBirthDate":"تاريخ الميلاد (اختياري)",
     "OptionalGender":"النوع(اختيارى)",
