--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -123,6 +123,8 @@
     "NowInIkea":"Now in IKEA Egypt",
 
     "Offers":"Offers",
+    "OnlyInStock":"only in stock!",
+    "OutOfStock":"out of stock!",
     "OpenHours":"See opening hours and more",
     "OptionalBirthDate":"Birthdate (Optional)",
     "OptionalGender":"Gender (Optional)",
