apply localization on firestore data

--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -160,6 +160,7 @@
     "Rooms":"الغرف",
 
     "Sale":"تخفيض",
+    "SaleSubTotal":"المجموع الفرعي بالتخفيض",
     "SaveChanges":"حفظ التغييرات",
     "SaveUntilReady":"احفظ المنتجات هنا حتى تصبح مستعدًا ",
     "SearchPlaceHolder":"عما تبحث؟",
