--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -160,6 +160,7 @@
     "Rooms":"Rooms",
 
     "Sale":"Sale",
+    "SaleSubTotal":"Sale subTotal",
     "SaveChanges":"Save changes",
     "SaveUntilReady":"Save it here until you're ready",
     "SearchPlaceHolder":"What are you looking for?",
