filters from db

--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -191,6 +191,7 @@
 
     "WhatNew":"جديدنا",
     "Width":"العرض",
+    "Length":"الطول",
     "WishList":"قائمة الرغبات",
     "WorkingAtIkea":"العمل في ايكيا",
     "WrongPassword":"كلمة المرور خاطئة"
