--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -191,6 +191,7 @@
 
     "WhatNew":"What's new",
     "Width":"Width",
+    "Length":"Length",
     "WishList":"Wish List",
     "WorkingAtIkea":"Working at IKEA",
     "WrongPassword":"Password is wrong"
