add localization to checkout page and filteration

--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -7,6 +7,7 @@
     "AddBirthDate":"Add birth date",
     "AddGender":"Add gender",
     "AddMobile":"Add mobile",
+    "AddNewAddress":"ADD NEW SHIPPING ADDRESS",
     "AddToCart":"Add to shopping bag",
     "Added":"Added",
     "Address":"Address",
@@ -14,10 +15,17 @@
     "AllFilters":"All filters",
     "Assembly":"Assembly",
     "AssemblyDesc":"A professional service – at home or at work",
+    "AssemblyTime":"Assembly Time",
     "AvailableInStore":"Available in-store?",
     "AvailableInStock":"Available in stock",
 
+    "Back":"Back",
+    "BestMatch":"Best match",
+    "BillingAddress":"Billing Address",
+    "BillingShippingAddress":"Billing and Shipping Address",
+    "Blue":"Blue",
     "BrowseProducts":"Browse our products",
+    "BuildingNoPlaceHolder":"Building Name/Apartment No./Floor No.",
     "BuyBack":"Buy back and resell",
     "BuyBackDesc":"Money for your used IKEA products",
     "BuyOnline":"Buy Online",
@@ -29,6 +37,7 @@
     "CharPassValidation":"Password must have 8 characters",
     "Checkout":"Begin Checkout",
     "ChooseNearestStore":"Choose your nearest IKEA store",
+    "ClearAll":"Clear all",
     "ClickAndCollect":"Click and collect",
     "ClickAndCollectDesc":"Orders that you pick up yourself",
     "Close":"Close",
@@ -37,6 +46,9 @@
     "CommunityEngagement":"Community engagement",
     "Contact":"Contact",
     "ContactUs":"Contact us",
+    "Continue":"Continue",
+    "ContinuePaymentConfirmation":"By clicking the 'Continue with the Paymen' you indicate that you agree to ",
+    "ContinueWithPayment":"CONTINUE WITH THE PAYMENT",
     "ConfirmNewPassword":"Confirm new password",
     "ConfirmPasswordWrong":"Confirm password doesn not match new password",
     "CookiePolicy":"Cookie policy",
@@ -54,6 +66,10 @@
     "DeleteInfo":"You can delete your IKEA acoount at any point. This deletes your profile and the info associated with it.",
     "DeleteProfile":"Delete profile",
     "Delivered":"Delivered",
+    "DeliveryInvoice":"Delivery Invoice",
+    "DeliveryDateTime":"Delivery date and time",
+    "DeliveryDate":"Delivery Date",
+    "DeliveryTime":"Delivery Time",
     "DemocraticDesign":"Democratic design",
     
     "Edit":"Edit",
@@ -66,9 +82,11 @@
     "FAQ":"FAQ",
     "Feedback":"Give us your feedback",
     "Female":"Female",
+    "FilterHeader":"filters and sort",
     "FirstName":"First name",
     "FirstNameWrong":"First Name should be 3 letters at least",
     "ForgetPassword":"Forget your Password?",
+    "FullName":"Full Name",
 
     "GeneralInfo":"General information",
     "GetDirection":"Get direction",
@@ -85,10 +103,11 @@
     "IkeaStores":"Stores",
     "Items":"items",
     "ItemsInBag":"items in shopping bag",
-
+    
     "LastName":"Last name",
     "LastNameWrong":"Last Name should be 3 letters at least",
     "LearnMore":"Learn more",
+    "Length":"Length",
     "LimitedOffer":"Limited time offer",
     "Login":"Login",
     "LoginDesc":"Login or create an account to access your latest shopping lists within our website and IKEA Shopping app.",
@@ -118,6 +137,7 @@
     "NewProducts":"New Products",
     "NewsRoom":"Newsroom",
     "NoData":"oops no data :(",
+    "NoElevatorNote":"* If there is no elevator in the building, we will deliver up to the 4th floor. Otherwise, the delivery to the desired floor will be on the customer responsibility.",
     "NoOrders":"you have no orders",
     "NotReady":"Not quite ready to buy?",
     "NowInIkea":"Now in IKEA Egypt",
@@ -130,6 +150,7 @@
     "OptionalGender":"Gender (Optional)",
     "Order":"Order",
     "Orders":"Orders",
+    "OrderTotal":"Order Total",
 
     "Password":"password",
     "PasswordInvalid":"Password is not valid",
@@ -154,8 +175,11 @@
     "ProductRecalls":"Product recalls",
     "PurchasedAmount":"Purchased Amount",
 
+    "Red":"Red",
+    "RelatedCategories":"Related categories",
     "RelatedProducts":"Related products",
     "ReturnPolicy":"Return policy",
+    "ReviewConfirm":"Review and Confirm",
     "Room":"Room",
     "Rooms":"Rooms",
 
@@ -165,9 +189,12 @@
     "SaveUntilReady":"Save it here until you're ready",
     "SearchPlaceHolder":"What are you looking for?",
     "SeeDeliveryOptions":"See delivery options at checkout",
+    "SelectArea":"Select Area",
+    "SelectGovernorate":"Select Governorate",
     "SelectLocalStore":"Select your local IKEA store to see the location, opening hours, offers& events, services, and more.",
     "SelectStore":"Select store",
     "Settings":"Settings",
+    "ShippingAddress":"Shipping Address",
     "ShoppingCart":"Shopping cart",
     "Size":"Size",
     "SmallAndUppercaseValidation":"Password must have SmallCase and UpperCase",
@@ -181,17 +208,20 @@
     "TermsConditions":"Terms and conditions",
     "Thickness":"Thickness",
     "ThisIkea":"This is IKEA",
+    "TopSeller":"Top Seller",
     "TotalPrice":"Total Price:",
     "TotalWithVat":"Total For This Order incl. VAT",
 
+    "UnavailableMessage":"Below items were removed because selected amount is not available now",
     "UserExists":"User is alredy exist",
     "UsefulLinks":"Useful links",
+    "UseAsShipping":"Use as shipping address",
 
     "ValidEmailExample":"Example of valid mail: examle@ec123.com",
+    "View":"View",
 
     "WhatNew":"What's new",
     "Width":"Width",
-    "Length":"Length",
     "WishList":"Wish List",
     "WorkingAtIkea":"Working at IKEA",
     "WrongPassword":"Password is wrong"
