--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -7,6 +7,7 @@
     "AddBirthDate":"إضافة تاريخ الميلاد",
     "AddGender":"نوع",
     "AddMobile":"إضافة هاتفك المحمول",
+    "AddNewAddress":"أضف عنوان جديد لإرسال الفواتير",
     "AddToCart":"أضف إلى العربة ",
     "Added":"تمت الإضافة",
     "Address":"عنوان",
@@ -14,10 +15,17 @@
     "AllFilters":"جميع الفلاتر",
     "Assembly":"التجميع",
     "AssemblyDesc":"خدمة احترافية - في المنزل أو في العمل",
+    "AssemblyTime":"موعد التركيب",
     "AvailableInStore":"متوفر بالمتجر",
     "AvailableInStock":"المخزون المتوفر",
 
+    "Back":"العودة",
+    "BestMatch":"أقرب تطابق",
+    "BillingAddress":"عنوان إرسال الفواتير",
+    "BillingShippingAddress":"عنوان الشحن وإرسال الفواتير",
+    "Blue":"أزرق",
     "BrowseProducts":"استعرض منتجاتنا ",
+    "BuildingNoPlaceHolder":"اسم المبنى / رقم الشقة",
     "BuyBack":"إعادة الشراء وإعادة البيع",
     "BuyBackDesc":"المال لشراء منتجات ايكيا المستعملة",
     "BuyOnline":"الشراء عبر الإنترنت ",
@@ -29,6 +37,7 @@
     "CharPassValidation":"طول 8 على الأقل",
     "Checkout":"ابدأ السداد",
     "ChooseNearestStore":"اختر أقرب محل ايكيا إليك",
+    "ClearAll":"إلغاء الفرز",
     "ClickAndCollect":"اطلب واستلم",
     "ClickAndCollectDesc":"طلبات تستلمها بنفسك",
     "Close":"إغلاق",
@@ -37,6 +46,9 @@
     "CommunityEngagement":"مشاركة المجتمع المحلي",
     "Contact":"التواصل",
     "ContactUs":"اتصل بنا",
+    "Continue":"استمر",
+    "ContinuePaymentConfirmation":" بالنقر فوق 'المتابعة للسداد والدفع' ، فإنك تشير إلى موافقتك على",
+    "ContinueWithPayment":"المتابعة للسداد والدفع",
     "ConfirmNewPassword":"تأكيد كلمة المرور الجديدة",
     "ConfirmPasswordWrong":"كلمات المرور لا تتطابق.",
     "CookiePolicy":"سياسة ملفات تعريف الارتباط",
@@ -54,6 +66,10 @@
     "DeleteInfo":"يمكنك حذف حساب ايكيا الخاص بك في أي وقت. يؤدي هذا إلى حذف ملفك والمعلومات المرتبطة به.",
     "DeleteProfile":"حذف الملف الشخصي",
     "Delivered":"تم التسليم",
+    "DeliveryInvoice":"التوصيل والتجميع ",
+    "DeliveryDateTime":"تاريخ وموعد التوصيل ",
+    "DeliveryDate":"تاريخ التوصيل",
+    "DeliveryTime":"موعد التوصيل",
     "DemocraticDesign":"التصميم الديمقراطي",
 
     "Edit":"تعديل",
@@ -66,9 +82,11 @@
     "FAQ":"الأسئلة المتكررة",
     "Feedback":"شاركنا ملاحظاتك",
     "Female":"انثي",
+    "FilterHeader":"التصفية والفرز",
     "FirstName":"الاسم الاول",
     "FirstNameWrong":"ا الاسم الاول يجب ان يكون 3 حروف علي الأقل",
     "ForgetPassword":"نسيت كلمة المرور؟",
+    "FullName":"الاسم الكامل",
 
     "GeneralInfo":"معلومات عامة",
     "GetDirection":"الحصول على ارشادات الوصول",
@@ -89,6 +107,7 @@
     "LastName":"اسم العائلة",
     "LastNameWrong":"اسم العائلة يجب ان يكون 3 حروف علي الأقل",
     "LearnMore":"تعرّف على المزيد",
+    "Length":"الطول",
     "LimitedOffer":"عرض لفترة محدودة",
     "Login":"تسجيل الدخول",
     "LoginDesc":"يرجى تسجيل الدخول أو إنشاء حساب للوصول إلى أحدث قوائم التسوق الخاصة بك داخل موقعنا على الإنترنت وتطبيق ايكيا للتسوق.",
@@ -118,6 +137,7 @@
     "NewProducts":"منتجات جديدة",
     "NewsRoom":"غرفة الأخبار",
     "NoData":"لا يوجد بيانات",
+    "NoElevatorNote":"* في حالة عدم توافر مصعد في المبنى ، فسنقوم بالتوصيل حتى الطابق الرابع. خلاف ذلك ، سيكون التوصيل إلى الطابق المطلوب على مسؤولية العميل",
     "NoOrders":"ليس لديك طلبيات",
     "NotReady":"لست مستعدًا للشراء بعد؟ ",
     "NowInIkea":"الآن في ايكيا مصر",
@@ -130,6 +150,7 @@
     "OptionalGender":"النوع(اختيارى)",
     "Order":"الطلبية",
     "Orders":"الطلبيات",
+    "OrderTotal":"المجموع",
     
     "Password":"كلمة المرور",
     "PasswordInvalid":"كلمة المرور غير صحيحة",
@@ -154,8 +175,11 @@
     "ProductRecalls":"عمليات سحب المنتجات",
     "PurchasedAmount":"الكمية المطلوبة",
 
-    "RelatedProducts":"منتجات ذات صله",
+    "Red":"أحمر",
+    "RelatedCategories":"الفئات ذات الصلة",
+    "RelatedProducts":"المنتجات ذات الصله",
     "ReturnPolicy":"سياسة الإرجاع",
+    "ReviewConfirm":"",
     "Room":"غرفة",
     "Rooms":"الغرف",
 
@@ -165,9 +189,12 @@
     "SaveUntilReady":"احفظ المنتجات هنا حتى تصبح مستعدًا ",
     "SearchPlaceHolder":"عما تبحث؟",
     "SeeDeliveryOptions":"انظر خيارات التسليم عند الخروج",
+    "SelectArea":"إختر منطقة",
+    "SelectGovernorate":"إختر المحافظة",
     "SelectLocalStore":"اختر محل ايكيا الأقرب إليك لتتعرف على الموقع، وساعات العمل، والعروض والفعاليات، والخدمات، والمزيد. محل ايكيا",
     "SelectStore":"اختر المتجر",
     "Settings":"الإعدادات",
+    "ShippingAddress":"عنوان الشحن",
     "ShoppingCart":"عربة التسوق",
     "Size":"حجم",
     "SmallAndUppercaseValidation":"حرف صغير و حرف كبير",
@@ -181,17 +208,19 @@
     "TermsConditions":"الشروط والأحكام",
     "Thickness":"العمق",
     "ThisIkea":"هذه هي ايكيا",
+    "TopSeller":"الأكثر مبيعا",
     "TotalPrice":"مجموع الطلبيات:",
     "TotalWithVat":"إجمالي هذا الطلب شاملًا ضريبة القيمة المضافة",
 
+    "UnavailableMessage":"تمت إزالة هذه المنتجات لأن الكمية المحدده غير متوفره الآن ",
     "UserExists":"المستخدم موجود بالفعل",
     "UsefulLinks":"روابط مفيدة",
+    "UseAsShipping":" استخدم هذا العنوان للشحن",
 
     "ValidEmailExample":"شكل البريد الايليكترونى الصحيح : examle@ec123.com",
-
+    "View":"عرض",
     "WhatNew":"جديدنا",
     "Width":"العرض",
-    "Length":"الطول",
     "WishList":"قائمة الرغبات",
     "WorkingAtIkea":"العمل في ايكيا",
     "WrongPassword":"كلمة المرور خاطئة"
