separate orders (completed - pending)

--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -44,6 +44,7 @@
     "cm":"سم",
     "Color":"اللون",
     "CommunityEngagement":"مشاركة المجتمع المحلي",
+    "CompletedOrders":"طلبيات تم تسليمها",
     "Contact":"التواصل",
     "ContactUs":"اتصل بنا",
     "Continue":"استمر",
@@ -138,7 +139,8 @@
     "NewsRoom":"غرفة الأخبار",
     "NoData":"لا يوجد بيانات",
     "NoElevatorNote":"* في حالة عدم توافر مصعد في المبنى ، فسنقوم بالتوصيل حتى الطابق الرابع. خلاف ذلك ، سيكون التوصيل إلى الطابق المطلوب على مسؤولية العميل",
-    "NoOrders":"ليس لديك طلبيات",
+    "NoOrders":"ليس لديك طلبيات تم تسليمها",
+    "NoOrdersPending":"ليس لديك طلبيات لم يتم تسليمها",
     "NotReady":"لست مستعدًا للشراء بعد؟ ",
     "NowInIkea":"الآن في ايكيا مصر",
 
@@ -158,6 +160,7 @@
     "PaymentOption":"خيارات الدفع",
     "PaymentOptionDesc":"كيفية الدفع ، في المتجر وعلى الإنترنت",
     "Pending":"لم يسلم بعد",
+    "PendingOrders":"طلبيات لم تسلم بعد",
     "PersonalInfo":"المعلومات الشخصية",
     "PhoneInvalid":"رقم الهاتف المحمول غير صالح.",
     "PlanningTools":"أدوات التخطيط",
