--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -44,6 +44,7 @@
     "cm":"cm",
     "Color":"Color",
     "CommunityEngagement":"Community engagement",
+    "CompletedOrders":"Completed orders",
     "Contact":"Contact",
     "ContactUs":"Contact us",
     "Continue":"Continue",
@@ -138,7 +139,8 @@
     "NewsRoom":"Newsroom",
     "NoData":"oops no data :(",
     "NoElevatorNote":"* If there is no elevator in the building, we will deliver up to the 4th floor. Otherwise, the delivery to the desired floor will be on the customer responsibility.",
-    "NoOrders":"you have no orders",
+    "NoOrders":"you have no completed orders",
+    "NoOrdersPending":"you have no pending orders",
     "NotReady":"Not quite ready to buy?",
     "NowInIkea":"Now in IKEA Egypt",
 
@@ -158,6 +160,7 @@
     "PaymentOption":"Payment options",
     "PaymentOptionDesc":"How to pay, in store and online",
     "Pending":"Pending",
+    "PendingOrders":"Pending orders",
     "PersonalInfo":"personal information",
     "PhoneInvalid":"your number is not valid",
     "PlanningTools":"Planning tools",
