Show rating in the order page immediately

--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -18,6 +18,7 @@
   "AssemblyTime": "موعد التركيب",
   "AvailableInStore": "متوفر بالمتجر",
   "AvailableInStock": "المخزون المتوفر",
+  "AverageRating": "متوسط تقييمات العملاء",
 
   "Back": "العودة",
   "BestMatch": "أقرب تطابق",
