--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -18,6 +18,7 @@
   "AssemblyTime": "Assembly Time",
   "AvailableInStore": "Available in-store?",
   "AvailableInStock": "Available in stock",
+  "AverageRating": "Average customer ratings",
 
   "Back": "Back",
   "BestMatch": "Best match",
