add localization for rating

--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -48,6 +48,7 @@
   "cm": "سم",
   "Color": "اللون",
   "Comment":"تعليق",
+  "CommentPlaceholder":"من فضلك أضف تعليقا",
   "CommunityEngagement": "مشاركة المجتمع المحلي",
   "CompletedOrders": "طلبيات تم تسليمها",
   "Contact": "التواصل",
