--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -48,6 +48,7 @@
   "cm": "cm",
   "Color": "Color",
   "Comment":"Comment",
+  "CommentPlaceholder":"Please add a comment",
   "CommunityEngagement": "Community engagement",
   "CompletedOrders": "Completed orders",
   "Contact": "Contact",
